--- a/static/styles/user_point_of_sale.css
+++ b/static/styles/user_point_of_sale.css
@@ -1,7 +1,3 @@
-* {box-sizing: border-box;}
-
-#sale-point {background-color: #373737;}
-
 .container {
     margin-top: 20px;
     margin-left: 100px;
@@ -11,8 +7,7 @@ label {
     font-size: 20px;
     margin-top: 5px;
     margin-bottom: 10px;
-    color: #a8a7a8;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+    color: #000000;
 }
 
 input {
@@ -22,8 +17,7 @@ input {
     border-radius: 4px;
     font-size: 16px;
     font-weight: 300;
-    color: #bbb;
-    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    color: rgb(26, 26, 26);
     background: rgba(0, 0, 0, 0.16);
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
     border: none;
@@ -43,16 +37,21 @@ th, td {
     border-bottom: 1px inset rgba(0, 0, 0, 0.3);
     text-align: left;
     padding: 8px;
-    color: #bbb;
+    color: rgb(207, 207, 207);
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
     background: rgba(0, 0, 0, 0.16);
 }
+
+tr {background-color: #686868}
 
 td button {
     cursor: pointer;
     border: none;
     outline: none;
-    background: rgba(0, 0, 0, 0.16);
+    color: rgb(207, 207, 207);
+    background: none;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 tr[id] {
